[Feat] 일자리 신청 내역 조회 기능 수정 1. 대기, 거절, 승낙 => 확정/진행중/마감으로 변경 2. 프론트 도메인에 맞춰 DTO 수정하는 레이어 추가